issue getAll services, query fixes and addtional getOnlyOrphans parameter,dependenIssue and assignie add services
